--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: var(--maao-primary);">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="{{ path('app_home') }}">
-                    <img src="{{ asset('images/maao-logo.png') }}" alt="Barangay Logo" class="d-inline-block">
+                    <img src="{{ asset('images/maao logo.png') }}" alt="Barangay Logo" class="d-inline-block">
                     <span>Barangay Ma-ao</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
